# clipcast

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
ideas/docs/superpowers/plans/: 2026-04-19-vlog-planning.md
ideas/docs/superpowers/specs/: 2026-04-18-vlog-planning-design.md
prompts/: adventure.md  default.md  family.md  plan.md
src/: analyzer.rs  clip.rs  commands.rs  duration.rs  main.rs  output.rs  paths.rs  pipeline.rs  plan.rs  preflight.rs  process.rs  prompts.rs  sidecar.rs
src/analyzer/: claude_print.rs
src/commands/: add.rs  analyze.rs  build.rs  list.rs  plan.rs  render.rs  schema.rs  status.rs
src/pipeline/: analyze.rs  concat.rs  discover.rs  filter.rs  frames.rs  plan.rs  transcribe.rs
tests/: end_to_end.rs  mock.rs
tests/fixtures/fake-bin/: claude  ffmpeg  ffprobe
tests/fixtures/golden/: decisions-schema.json  plan-schema.json
