[package]
name = "clipcast"
version = "0.1.0"
edition = "2021"
description = "Turn a directory of short video clips into a vlog via multimodal LLM scoring"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "fs", "sync", "time"] }
anyhow = "1"
thiserror = "2"
which = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "deny"
dead_code = "deny"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -2 }
unwrap_used = "warn"
expect_used = "warn"
panic = "deny"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "allow"
print_stderr = "warn"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
struct_field_names = "allow"
cast_precision_loss = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
